# Deploy_ML_Aula6

./: api_modelo.py  modelo.py  predictions.db  pyproject.toml  requirements.txt  vercel.json
