[project]
name = "deploy-ml-aula6"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Henrique",email = "phperesdasilva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib (>=1.5.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
